--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -1565,7 +1565,7 @@
 	#top-account a.btn i:last-child { display: none; }
 
 	.swiper_wrapper:not(.force-full-screen),
-	.swiper_wrapper:not(.force-full-screen):not(.canvas-slider-grid) .swiper-slide { height: 180px !important; }
+	.swiper_wrapper:not(.force-full-screen):not(.canvas-slider-grid) .swiper-slide { height: 80vh !important; }
 
 	.swiper_wrapper .slider-caption h2 { font-size: 1.75rem; }
 
